# rpyc-d2-map-api

./: .gitignore  README.md  pyproject.toml  settings.toml
dep/pyastar2d/: astar.cp311-win32.pyd
example/: main.py
map_server/: MapService.py  __init__.py  __main__.py
map_server/pyWrappers/: ApiWrapper.py  __init__.py  pyStructures.py
map_server/session/: Map.py  Session.py  __init__.py
map_server/utils/: AreaData.py  __init__.py
map_server/utils/data/: Act.py  Area.py  GameObjects.py  Npcs.py  PresetType.py  __init__.py
tools/: build.py
