[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "map-layout"
version = "2.0.1"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
]

dependencies = [
    "cachetools",
    "rpyc",
    "pillow==9.3",
    "pyastar2d",
    "numpy",
    "opencv-python",
    "black"
]

[tool.setuptools.packages.find]
include = ["map_server*"]

[project.scripts]
map_server = "map_server.__main__:main"

[tool.black]
line-length = 120
target-version = ['py311']